--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,20 +7,19 @@ services:
         type: tmpfs
   api:
     environment:
+      - BASE_URL=http://localhost:5000
       - FLASK_APP=plebbid.main
       - FLASK_ENV=development
       - DEBUG=1
+      - MOCK_LND=1
     ports:
       - "5000:5000"
     volumes:
       - "./plebbid:/app/plebbid"
     command: bash -c "flask create-db && python3 ./plebbid/main.py"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000/healthcheck" ]
-      interval: 3s
-      timeout: 3s
-      retries: 5
 
 networks:
+  db_network:
+    driver: bridge
   proxy:
     driver: bridge
