--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,22 +6,17 @@ services:
       - "/home/www/plebbid-dbdata:/var/lib/postgresql/data"
   api:
     environment:
+      - JOB=WEB
       - VIRTUAL_HOST=plebbid.21art.gallery
       - LETSENCRYPT_HOST=plebbid.21art.gallery
       - LND_GRPC=plebeian.m.voltageapp.io:10009
     volumes:
       - "/home/www/plebbid-secrets:/secrets"
   settle-bids:
-    build: .
-    depends_on: [db]
-    restart: on-failure
-    stop_grace_period: 1m
     environment:
-      - FLASK_APP=plebbid.main
       - JOB=SETTLE_BIDS
+      - FLASK_APP=plebbid.main
       - LND_GRPC=plebeian.m.voltageapp.io:10009
-    networks:
-      - db_network
     volumes:
       - "/home/www/plebbid-secrets:/secrets"
 
