--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,7 +13,7 @@ services:
       retries: 5
     environment:
       - BASE_URL=http://localhost:5000
-      - FLASK_APP=plebbid.main
+      - FLASK_APP=plebeianmarket.main
       - FLASK_ENV=development
       - DEBUG=1
       - MOCK_LND=1
@@ -21,20 +21,20 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - "./plebbid:/app/plebbid"
-    command: bash -c "flask create-db && python3 ./plebbid/main.py"
+      - "./plebeianmarket:/app/plebeianmarket"
+    command: bash -c "flask create-db && python3 ./plebeianmarket/main.py"
   settle-bids:
     depends_on:
       api: # this is because in ded & test mode, the API is the one initializing the database, on start
         condition: service_healthy
     environment:
-      - FLASK_APP=plebbid.main
+      - FLASK_APP=plebeianmarket.main
       - FLASK_ENV=development
       - DEBUG=1
       - MOCK_LND=1
       - SQLALCHEMY_DISABLE_POOLING=1
     volumes:
-      - "./plebbid:/app/plebbid"
+      - "./plebeianmarket:/app/plebeianmarket"
     command: flask settle-bids
 
 networks:
