--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,3 +26,9 @@ services:
     stop_grace_period: 1m
     networks:
       - db_network
+
+networks:
+  db_network:
+    driver: bridge
+  proxy:
+    driver: bridge
