--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -25,7 +25,7 @@ services:
     command: bash -c "flask create-db && python3 ./plebeianmarket/main.py"
   settle-bids:
     depends_on:
-      web: # this is because in dev & test mode, the API is the one initializing the database, on start
+      web: # this is because in dev & test mode, the web app is the one initializing the database, on start
         condition: service_healthy
     environment:
       - FLASK_APP=plebeianmarket.main
