--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,7 +7,7 @@ services:
         type: tmpfs
   web:
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000/healthcheck" ]
+      test: ["CMD", "curl", "-f", "http://localhost:5000/api/healthcheck" ]
       interval: 3s
       timeout: 3s
       retries: 5
