Move client app to a separate directory.

--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -12,6 +12,10 @@ server {
         proxy_redirect off;
     }
 
+    location /app/ {
+        alias /usr/share/nginx/html/app/;
+    }
+
     location /static/ {
         alias /usr/share/nginx/html/static/;
     }
