--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - LND_GRPC=plebeian.m.voltageapp.io:10009
     volumes:
-      - "/home/www/plebeia-nmarket-secrets:/secrets"
+      - "/home/www/plebeian-market-secrets:/secrets"
     command: gunicorn --chdir /app server.main:app -w 2 --threads 2 -b 0.0.0.0:8080
   nginx:
     build: ./services/nginx
@@ -16,6 +16,7 @@ services:
       - VIRTUAL_HOST=plebeian.market
       - LETSENCRYPT_HOST=plebeian.market
     volumes:
+      - ./client/app:/usr/share/nginx/html/app
       - ./client/static:/usr/share/nginx/html/static
     depends_on:
       - web
