--- a/services/nginx/Dockerfile
+++ b/services/nginx/Dockerfile
@@ -1,5 +1,15 @@
+FROM node:16-alpine AS builder
+
+COPY ./client /client
+
+RUN cd /client && npm run build
+
 FROM nginx:1.19-alpine
 
 RUN rm /etc/nginx/conf.d/default.conf
-COPY nginx.conf /etc/nginx/conf.d
+COPY ./services/nginx/nginx.conf /etc/nginx/conf.d
+
+COPY --from=builder /client/app /usr/share/nginx/html/app/
+COPY ./client/static /usr/share/nginx/html/static/
+
 EXPOSE 80
