Open auctions as a buyer.

--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -12,11 +12,11 @@ server {
         proxy_redirect off;
     }
 
-    location /app/ {
-        alias /usr/share/nginx/html/app/;
+    location /app {
+        alias /usr/share/nginx/html/app;
     }
 
-    location /static/ {
-        alias /usr/share/nginx/html/static/;
+    location /static {
+        alias /usr/share/nginx/html/static;
     }
 }
