--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "plebeianmarket-client",
   "version": "0.0.1",
   "devDependencies": {
-    "date-picker-svelte": "^2.0.0",
+    "dayjs": "^1.11.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.70.1",
     "rollup-plugin-commonjs": "^10.0.0",
