--- a/services/nginx/nginx.conf.template
+++ b/services/nginx/nginx.conf.template
@@ -14,6 +14,11 @@ server {
 
     location /app {
         alias /usr/share/nginx/html/app;
+        sub_filter 'href="/static/css/common.css"' 'href="/static/css/common.css?$BUILD_ID"';
+        sub_filter 'href="/static/css/style.css"' 'href="/static/css/style.css?$BUILD_ID"';
+        sub_filter 'src="/app/buyer/bundle.js"' 'src="/app/buyer/bundle.js?$BUILD_ID"';
+        sub_filter 'src="/app/seller/bundle.js"' 'src="/app/seller/bundle.js?$BUILD_ID"';
+        sub_filter_once on;
     }
 
     location /static {
