Use Tailwind CSS.

--- a/services/nginx/Dockerfile
+++ b/services/nginx/Dockerfile
@@ -2,7 +2,7 @@ FROM node:16-alpine AS builder
 
 COPY ./client /client
 
-RUN cd /client && npm install && npm run build
+RUN cd /client && npm install && npm run build && npm run buildcss
 
 FROM nginx:1.19-alpine
 
@@ -14,6 +14,6 @@ COPY ./services/nginx/nginx.conf.template /nginx.conf.template
 RUN envsubst '$BUILD_ID' < /nginx.conf.template > /etc/nginx/conf.d/nginx.conf
 
 COPY --from=builder /client/app /usr/share/nginx/html/app/
-COPY ./client/static /usr/share/nginx/html/static/
+COPY --from=builder /client/static /usr/share/nginx/html/static/
 
 EXPOSE 80
