--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,14 @@
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.0.0",
-    "svelte-time": "^0.6.1"
+    "svelte-time": "^0.6.1",
+    "tailwindcss": "^3.0.24"
   },
   "dependencies": {},
   "scripts": {
     "build": "rollup -c",
-    "autobuild": "rollup -c -w"
+    "buildcss": "npx tailwindcss -i ./src/tailwind.css -o ./static/style.css",
+    "autobuild": "rollup -c -w",
+    "autobuildcss": "npx tailwindcss -i ./src/tailwind.css -o ./static/style.css --watch"
   }
 }
