--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,7 +7,7 @@ services:
   web:
     environment:
       - BASE_URL=https://plebeian.market
-      - LND_GRPC=plebeian.m.voltageapp.io:10009
+      - LND_GRPC=plebeian-market.m.voltageapp.io:10009
     volumes:
       - "/home/www/plebeian-market-secrets:/secrets"
     command: gunicorn --chdir /app server.main:app -w 2 --threads 2 -b 0.0.0.0:8080
@@ -27,7 +27,7 @@ services:
   settle-bids:
     environment:
       - FLASK_APP=server.main
-      - LND_GRPC=plebeian.m.voltageapp.io:10009
+      - LND_GRPC=plebeian-market.m.voltageapp.io:10009
     volumes:
       - "/home/www/plebeian-market-secrets:/secrets"
     command: flask settle-bids
