--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,7 +13,7 @@ services:
       retries: 5
     environment:
       - BASE_URL=http://localhost:5000
-      - FLASK_APP=server.main
+      - FLASK_APP=main
       - FLASK_ENV=development
       - DEBUG=1
       - MOCK_LND=1
@@ -23,13 +23,13 @@ services:
     volumes:
       - "./server:/app/server"
       - "./client:/app/client"
-    command: bash -c "flask create-db && python3 ./server/main.py"
+    command: bash -c "flask db upgrade && python3 ./main.py"
   settle-bids:
     depends_on:
       web: # this is because in dev & test mode, the web app is the one initializing the database, on start
         condition: service_healthy
     environment:
-      - FLASK_APP=server.main
+      - FLASK_APP=main
       - FLASK_ENV=development
       - DEBUG=1
       - MOCK_LND=1
