--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "plebeianmarket-client",
   "version": "0.0.1",
   "devDependencies": {
+    "@bulatdashiev/svelte-slider": "^1.0.3",
     "dayjs": "^1.11.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.70.1",
