--- a/services/nginx/Dockerfile
+++ b/services/nginx/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:16-alpine AS builder
 
-COPY ./client /client
+COPY ./web /web
 
-RUN cd /client && npm install && npm run build && npm run buildcss
+RUN cd /web && npm install && npm run build && npm run buildcss
 
 FROM nginx:1.19-alpine
 
@@ -13,7 +13,7 @@ RUN rm /etc/nginx/conf.d/default.conf
 COPY ./services/nginx/nginx.conf.template /nginx.conf.template
 RUN envsubst '$BUILD_ID' < /nginx.conf.template > /etc/nginx/conf.d/nginx.conf
 
-COPY --from=builder /client/app /usr/share/nginx/html/app/
-COPY --from=builder /client/static /usr/share/nginx/html/static/
+COPY --from=builder /web/app /usr/share/nginx/html/app/
+COPY --from=builder /web/static /usr/share/nginx/html/static/
 
 EXPOSE 80
