--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.0.0",
+    "svelte-carousel": "^1.0.17-rc4",
     "svelte-time": "^0.6.1",
     "tailwindcss": "^3.0.24"
   },
