--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "devDependencies": {
     "@bulatdashiev/svelte-slider": "^1.0.3",
+    "daisyui": "^2.14.2",
     "dayjs": "^1.11.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.70.1",
