--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "svelte": "^3.0.0",
     "svelte-carousel": "^1.0.17-rc4",
     "svelte-time": "^0.6.1",
+    "svelte-toasts": "^1.1.2",
     "tailwindcss": "^3.0.24"
   },
   "dependencies": {},
