--- a/web/package.json
+++ b/web/package.json
@@ -3,26 +3,30 @@
   "version": "0.0.1",
   "devDependencies": {
     "@bulatdashiev/svelte-slider": "^1.0.3",
+    "@sveltejs/adapter-node": "^1.0.0-next.73",
+    "@sveltejs/kit": "next",
+    "autoprefixer": "^10.4.7",
     "daisyui": "^2.14.2",
-    "dayjs": "^1.11.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-svelte3": "^3.2.1",
     "npm-run-all": "^4.1.5",
-    "rollup": "^2.70.1",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-svelte": "^7.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.0.0",
-    "svelte-carousel": "^1.0.17-rc4",
-    "svelte-time": "^0.6.1",
+    "postcss": "^8.4.13",
+    "svelte": "^3.44.0",
+    "svelte-check": "^2.2.6",
     "svelte-toasts": "^1.1.2",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "typescript": "~4.6.2"
   },
+  "type": "module",
   "dependencies": {},
   "scripts": {
-    "build": "rollup -c",
-    "buildcss": "npx tailwindcss -i ./src/tailwind.css -o ./static/style.css",
-    "autobuild": "rollup -c -w",
-    "autobuildcss": "npx tailwindcss -i ./src/tailwind.css -o ./static/style.css --watch"
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "package": "svelte-kit package",
+    "preview": "svelte-kit preview",
+    "prepare": "svelte-kit sync",
+    "check": "svelte-check --tsconfig ./jsconfig.json",
+    "check:watch": "svelte-check --tsconfig ./jsconfig.json --watch",
+    "lint": "eslint --ignore-path .gitignore ."
   }
 }
