--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,7 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "svelte-kit dev",
+    "dev": "svelte-kit --host 0.0.0.0 dev",
     "build": "svelte-kit build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
