--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,6 +17,7 @@ services:
       - FLASK_ENV=development
       - DEBUG=1
       - MOCK_LND=1
+      - MOCK_S3=1
       - MOCK_TWITTER=1
       - DB_USERNAME=pleb
       - DB_PASSWORD=plebpass
@@ -35,6 +36,7 @@ services:
       - FLASK_ENV=development
       - DEBUG=1
       - MOCK_LND=1
+      - MOCK_S3=1
       - MOCK_TWITTER=1
       - DB_USERNAME=pleb
       - DB_PASSWORD=plebpass
