--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,7 @@
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
     "svelte-toasts": "^1.1.2",
-    "svelte-typewriter": "^3.0.0-alpha.12",
+    "svelte-typewriter": "3.0.0-alpha.12",
     "tailwindcss": "^3.0.24",
     "typescript": "~4.6.2"
   },
