--- a/web/package.json
+++ b/web/package.json
@@ -5,10 +5,10 @@
     "@sveltejs/adapter-node": "^1.0.0-next.73",
     "@sveltejs/kit": "next",
     "autoprefixer": "^10.4.7",
-    "btc2fiat": "^0.1.22",
+    "btc2fiat": "0.1.23",
     "daisyui": "^2.14.2",
-    "eslint": "^7.32.0",
-    "eslint-plugin-svelte3": "^3.2.1",
+    "eslint": "^8.19.0",
+    "eslint-plugin-svelte3": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.13",
     "svelte": "^3.44.0",
@@ -16,11 +16,12 @@
     "svelte-toasts": "^1.1.2",
     "svelte-typewriter": "^3.0.0-alpha.12",
     "tailwindcss": "^3.0.24",
-    "typescript": "~4.6.2"
+    "typescript": "~4.7.4",
+    "vite": "^2.9.13"
   },
   "type": "module",
   "scripts": {
-    "dev": "svelte-kit --host 0.0.0.0 dev",
+    "dev": "vite --host 0.0.0.0 dev",
     "build": "svelte-kit build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
