--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,7 @@
     "svelte-check": "^2.2.6",
     "svelte-toasts": "^1.1.2",
     "svelte-typewriter": "3.0.0-alpha.12",
-    "tailwindcss": "^3.0.24",
+    "tailwindcss": "3.0.24",
     "typescript": "~4.7.4",
     "vite": "^2.9.13"
   },
