--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,3 +1,4 @@
+bleach
 boto3
 ecdsa
 flask
@@ -7,6 +8,7 @@ flask-sqlalchemy
 gunicorn
 lnd-grpc-client>=0.3.41
 lnurl
+mistune
 psycopg2
 pyjwt
 pyqrcode
