add tab component for viewing markdown preview - use svelte markdown library - remove backend markdown conversion (frontend handles it)

--- a/web/package.json
+++ b/web/package.json
@@ -29,5 +29,8 @@
     "check": "svelte-check --tsconfig ./jsconfig.json",
     "check:watch": "svelte-check --tsconfig ./jsconfig.json --watch",
     "lint": "eslint --ignore-path .gitignore ."
+  },
+  "dependencies": {
+    "svelte-markdown": "^0.2.2"
   }
 }
