--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,7 @@
     "eslint-plugin-svelte3": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.13",
-    "svelte": "^3.44.0",
+    "svelte": ">=3.49.0",
     "svelte-check": "^2.2.6",
     "svelte-markdown": "^0.2.2",
     "svelte-toasts": "^1.1.2",
